--- a/config.json
+++ b/config.json
@@ -1,6 +1,1 @@
-{
-  "active-char": "joe",
-  "high-score": 0,
-  "joehs": 0,
-  "kanehs": 0
-}
+{"active-char": "joe", "high-score": 0, "joe-hs": 0, "kane-hs": 0}
